# moosefs

./: CLAUDE.md  Makefile  Makefile.am  Makefile.in  PROGRESS.md  config.h  config.status  configure  configure.ac  libtool
.claude/: CONTEXT.md  settings.local.json
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
mfschunkserver/: Makefile  masterconn.c  mfschunkdbdump  mfschunkserver  mfschunktool  mfscsstatsdump
mfsclient/: Makefile  libmfsio.la  libmfsio_la-chunkrwlock.lo  libmfsio_la-chunksdatacache.lo  libmfsio_la-csdb.lo  libmfsio_la-csorder.lo  libmfsio_la-extrapackets.lo  libmfsio_la-heapsorter.lo  libmfsio_la-inoleng.lo  libmfsio_la-mastercomm.lo  libmfsio_la-mfsio.lo  libmfsio_la-mfsioint.lo  libmfsio_la-mfsioint_lookupcache.lo  libmfsio_la-readdata.lo  libmfsio_la-stats.lo  libmfsio_la-truncate.lo  libmfsio_la-writedata.lo  mastercomm.c  mfsarchive  mfsbdev  mfsdiagtools  mfseattr  mfsfacl  mfsmount  mfspatadmin  mfsquota  mfsscadmin  mfssclass  mfssnapshots  mfstrashretention  mfstrashtime  mfstrashtool
mfscommon/: MFSCommunication.h  libmfsio_la-clocks.lo  libmfsio_la-conncache.lo  libmfsio_la-crc.lo  libmfsio_la-delayrun.lo  libmfsio_la-lwthread.lo  (+6 more)
mfsha/: INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  clientserv.c  clientserv.h  crdtstore.h  gossip.c  haconn.c  init.h  metasyncer.c  metasyncer.h  mfsha  mfsha-admin  mfsha.c  mfsha.cfg.template  mfsha.service  raftconsensus.c  raftconsensus.h  shardmgr.h
mfsha/.deps/: crdtstore.Po  gossip.Po  haconn.Po  metasyncer.Po  mfsha.Po  raftconsensus.Po  shardmgr.Po
(+275 files in other folders)
